--- a/config/default.yaml
+++ b/config/default.yaml
@@ -1,10 +1,10 @@
 rasterizer:
   command: phantomjs   # phantomjs executable
   port: 3001           # internal service port. No need to allow inbound or outbound access to this port
-  path: '/tmp/'        # where the screenshot files are stored
-  viewport: '1024x600' # browser window size. Height frows according to the content
+  path: '/tmp/screencaps/'        # where the screenshot files are stored
+  viewport: '1280x800' # browser window size. Height frows according to the content
 cache:
-  lifetime: 60000      # one minute, set to 0 for no cache
+  lifetime: 259200000      # one month (30 days), set to 0 for no cache
 server:
-  port: 3000           # main service port
+  port: 3030           # main service port
   useCors: false       # enable CORS support
